private_server/guard/CELL-39/Q-4/error.txt
  File "/kunden/homepages/8/d657042007/htdocs/CodeSet/private_server/guard/CELL-39/Q-4/39-4.py", line 2
    number = 12
         ^
IndentationError: expected an indented block
